# 18-500-ECE-Design-Experience

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
libs/freetype/builds/unix/: ftsystem.c
libs/jsoncpp/: CMakeLists.txt
libs/libaudiodecoder/include/: audiodecoderbase.h
libs/libaudiodecoder/src/: audiodecoderbase.cpp  audiodecodercoreaudio.cpp
libs/serial/: CMakeLists.txt
libs/serialib/lib/: serialib.cpp
python/: FINAL.py  bandpass.py  dynamic_beat_tracker.py  edit_song.py  filters.py  fitler2.py  getc.py  graphs.py  instrumental.py  json_data.json  json_data2.json  lib_trial.py  low_filter.py  melody.py  steamlined.py  trial.py  trial2.py  trial3.py  trial4.py
src/: Beatmap.cpp  Beatmap.hpp  ColorTextureProgram.cpp  ColorTextureProgram.hpp  Directory.hpp  DrumPeripheral.cpp  DrumPeripheral.hpp  FadingScreenTransition.cpp  FadingScreenTransition.hpp  Input.hpp  LoadImage.cpp  LoadImage.hpp  MainMenuMode.cpp  MainMenuMode.hpp  Mode.cpp  Mode.hpp  PlayMode.cpp  PlayMode.hpp  ScoreScreenMode.cpp  ScoreScreenMode.hpp  Shader.cpp  Shader.hpp  SongSelectionMode.cpp  SongSelectionMode.hpp  Sound.cpp  Sound.hpp  TextRenderProgram.cpp  TextRenderProgram.hpp  TextRenderer.cpp  TextRenderer.hpp  Vertex.hpp  main.cpp
